--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.port": 8095,
-    "liveServer.settings.multiRootWorkspaceName": "HTML-Websites"
+    "liveServer.settings.multiRootWorkspaceName": "HTML-Websites",
+    "git.terminalAuthentication": false
 }
