--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,5 @@
     "liveServer.settings.port": 8095,
     "liveServer.settings.multiRootWorkspaceName": "HTML-Websites",
     "git.terminalAuthentication": false,
+    "fiveServer.
 }
