Removed specific window.location.origin static string code.awesomeplayer.tech:8080 and made removing of url params faster

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "liveServer.settings.port": 8095,
     "liveServer.settings.multiRootWorkspaceName": "HTML-Websites",
-    "git.terminalAuthentication": false,
-    "fiveServer.
+    "git.terminalAuthentication": false
 }
